Margin fix for better look on Safari

--- a/static/curver.css
+++ b/static/curver.css
@@ -55,6 +55,7 @@ div.toolbar:empty {
 
 div.toolbar > * {
   border-right: 2px solid black;
+  margin: 0;
 }
 
 div.toolbar > *:first-child {
@@ -172,7 +173,6 @@ div.toolbar select {
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
-
 
 button.record[checked] {
   background-color: white;
